--- a/EuSouDoRockComEstilo_Cadastro.css
+++ b/EuSouDoRockComEstilo_Cadastro.css
@@ -1,3 +1,34 @@
+.NavegandoNoRock
+{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    list-style: none;
+    justify-content: space-evenly;
+    background-color: black;
+}
+
+h5
+{
+ justify-content: center;
+ align-items: center;
+ display: flex;
+ background-color: black;
+ color: white;
+ margin: 0;
+ padding: 40px;
+}
+
+h1
+{
+     color: #fff;
+}
+
+li
+{
+     color: #d60404;
+}
+
 .Trevas
 {
     position: absolute;
