Colocar o botão de gostei e conectar para metricas]

--- a/EuSouDoRockComEstilo_Login.css
+++ b/EuSouDoRockComEstilo_Login.css
@@ -95,3 +95,10 @@ input:focus + label
   color: #d60404;
   font-weight: bold;
 }
+
+*
+{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
